--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         body
         {
             margin: 0;
+            border: 10px solid rgba(22, 22, 22, 0.815);
         }
         img
         {
