--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             }
         }
     </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <img src="images/invie-responsive.png" alt="" id="responsive">
