Corregida ruta imagenes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <img src="images/invie-responsive.png" alt="" id="responsive">
-    <img src="images/nueva-version.jpg" alt="" class="normal">
+    <img src="Images/invie-responsive.png" alt="" id="responsive">
+    <img src="Images/nueva-version.jpg" alt="" class="normal">
 </body>
 </html>
